test/compilable/parse11751.d
// REQUIRED_ARGS: -o-
// PERMUTE_ARGS:

static assert(is(float == typeof(0x0.1p1F)));
