test/fail_compilation/gag4269d.d
// REQUIRED_ARGS: -c -o-

static if(is(typeof(X4.init))) {}
Y4 X4() { return typeof(return).init; }
 